--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="js/index.js" ></script>
 </head>
 <body>
+	
 <div class="wp">
   <div class="wp-inner">
   	<!--第一页--引导页-->
@@ -268,6 +269,7 @@
    </div>
   </div>
 </div>
+<span class="start"><b></b></span>
 </body>
 <script> 
 	 
