--- a/index.html
+++ b/index.html
@@ -234,11 +234,10 @@
    	    	<div class="voucherMoney"><i>&yen;</i><span>28</span></div>
    	    	<div class="shareTitle">
    	    		<p class="shareDescribe">优惠券</p>
-   	    		<p class="clickCopy">点击复制</p>
+   	    		<p class="clickCopy" id="copy_btn">点击复制</p>
    	    	</div>
    	    	<div class="copy_contain" id="copy_contain">224543252223522212221234</div>
    	    </div>
-   	    <input type="" name="" id="" value="" width="200"/>
    	    <div class="voucher"></div>
    	    <div class="shareGo"></div>
    	    <img class="sharePeople" src="img/sharePeople.png"/>
